--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "javaabu/helpers": "^1.60"
+        "laravel/framework": "^12.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.6.10",
