--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,7 @@ jobs:
             matrix:
                 os: [ ubuntu-latest ]
                 php: [ 8.4, 8.3, 8.2 ]
-                laravel: [ ^^12.51 ]
+                laravel: [ ^12.51 ]
                 stability: [ prefer-lowest, prefer-stable ]
                 include:
                     -   laravel: ^12.51
